ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/Income_Details__c.object-meta.xml
<CustomObject>
    <label>Income Details</label>
    <nameField>
        <label>Income Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Income Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>