ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/ABB_to_be_considered__c.field-meta.xml
<CustomField>
    <fullName>ABB_to_be_considered__c</fullName>
    <label>ABB to be considered</label>
    <length>18</length>
    <type>Text</type>
</CustomField>