ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/API_Transaction_Status__c.field-meta.xml
<CustomField>
    <fullName>API_Transaction_Status__c</fullName>
    <label>API Transaction Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>