ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <label>Applicant</label>
    <referenceTo>Applicant__c</referenceTo>
    <relationshipName>Income_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>