ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Area_Of_Registration__c.field-meta.xml
<CustomField>
    <fullName>Area_Of_Registration__c</fullName>
    <label>Area Of Registration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Andhra Pradesh Medical Council</fullName>
            </value>
            <value>
                <fullName>Arunachal Pradesh Medical Council</fullName>
            </value>
            <value>
                <fullName>Assam Medical Council</fullName>
            </value>
            <value>
                <fullName>Bareilly Medical Council</fullName>
            </value>
            <value>
                <fullName>Bhopal Medical Council</fullName>
            </value>
            <value>
                <fullName>Bihar Medical Council</fullName>
            </value>
            <value>
                <fullName>Bombay Medical Council</fullName>
            </value>
            <value>
                <fullName>Chandigarh Medical Council</fullName>
            </value>
            <value>
                <fullName>Chattisgarh Medical Council</fullName>
            </value>
            <value>
                <fullName>Delhi Medical Council</fullName>
            </value>
            <value>
                <fullName>Dental Council of India</fullName>
            </value>
            <value>
                <fullName>General Medical Council</fullName>
            </value>
            <value>
                <fullName>Goa Medical Council</fullName>
            </value>
            <value>
                <fullName>Gujarat Medical Council</fullName>
            </value>
            <value>
                <fullName>Haryana Dental &amp;amp; Medical Councils</fullName>
            </value>
            <value>
                <fullName>Himanchal Pradesh Medical Council</fullName>
            </value>
            <value>
                <fullName>Hyderabad Medical Council</fullName>
            </value>
            <value>
                <fullName>Jammu &amp;amp; Kashmir Medical Council</fullName>
            </value>
            <value>
                <fullName>Jharkhand Medical Council</fullName>
            </value>
            <value>
                <fullName>Karnataka Medical Council</fullName>
            </value>
            <value>
                <fullName>Kerala Medical Council</fullName>
            </value>
            <value>
                <fullName>Madhya Pradesh Medical Council</fullName>
            </value>
            <value>
                <fullName>Madras Medical Council</fullName>
            </value>
            <value>
                <fullName>Mahakoshal Medical Council</fullName>
            </value>
            <value>
                <fullName>Maharashtra Medical Council</fullName>
            </value>
            <value>
                <fullName>Manipur Medical Council</fullName>
            </value>
            <value>
                <fullName>Medical Council of India</fullName>
            </value>
            <value>
                <fullName>Medical Council of Tanganyika</fullName>
            </value>
            <value>
                <fullName>Mizoram Medical Council</fullName>
            </value>
            <value>
                <fullName>Mysore Medical Council</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>