ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Assessment_Year__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Year__c</fullName>
    <label>Assessment Year</label>
    <length>20</length>
    <type>Text</type>
</CustomField>