ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Average_Bank_Balance__c.field-meta.xml
<CustomField>
    <fullName>Average_Bank_Balance__c</fullName>
    <description>Coming from perfios in D2C</description>
    <label>Average Bank Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>