ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Avg_Income__c.field-meta.xml
<CustomField>
    <fullName>Avg_Income__c</fullName>
    <formula>Income__c  / 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>