ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Balance_Account_Exists__c.field-meta.xml
<CustomField>
    <fullName>Balance_Account_Exists__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do you have an account where you maintain balance?</description>
    <inlineHelpText>Do you have an account where you maintain balance?</inlineHelpText>
    <label>Balance Account Exists</label>
    <type>Checkbox</type>
</CustomField>