ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/BSR_Occupation__c.field-meta.xml
<CustomField>
    <fullName>BSR_Occupation__c</fullName>
    <label>BSR Occupation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>95012</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>