ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Capture_GST_Method__c.field-meta.xml
<CustomField>
    <fullName>Capture_GST_Method__c</fullName>
    <label>Capture GST Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Online via link</fullName>
            </value>
            <value>
                <fullName>Upload online via link</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>