ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Cash_and_Bank_Balances__c.field-meta.xml
<CustomField>
    <fullName>Cash_and_Bank_Balances__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cash and Bank Balances</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>