ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Checked_entered_income__c.field-meta.xml
<CustomField>
    <fullName>Checked_entered_income__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checked entered income</label>
    <type>Checkbox</type>
</CustomField>