ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Client_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Transaction_Id__c</fullName>
    <label>Client Transaction Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>