ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Current_Liabilities__c.field-meta.xml
<CustomField>
    <fullName>Current_Liabilities__c</fullName>
    <label>Current Liabilities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>