ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Current_Years_in_employment_business__c.field-meta.xml
<CustomField>
    <fullName>Current_Years_in_employment_business__c</fullName>
    <label>Current Years in employment/business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt;1 Year</fullName>
            </value>
            <value>
                <fullName>B/W 1 - 2</fullName>
            </value>
            <value>
                <fullName>B/W 2 - 3</fullName>
            </value>
            <value>
                <fullName>&gt;3 Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>