ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <label>Destination</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>netbankingFetch</fullName>
            </value>
            <value>
                <fullName>statement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>