ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Do_You_File_GST__c.field-meta.xml
<CustomField>
    <fullName>Do_You_File_GST__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do You File GST</label>
    <type>Checkbox</type>
</CustomField>