ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Do_you_have_another_ITR__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_another_ITR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do you have another ITR</label>
    <type>Checkbox</type>
</CustomField>