ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Document_report_generation_initiated__c.field-meta.xml
<CustomField>
    <fullName>Document_report_generation_initiated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox for status of initiation of report generation from perfios</description>
    <label>Document report generation initiated</label>
    <type>Checkbox</type>
</CustomField>