ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ITR-V</fullName>
            </value>
            <value>
                <fullName>ITR-Forms</fullName>
            </value>
            <value>
                <fullName>Form26As</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>