ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Document_uploaded_to_Perfios__c.field-meta.xml
<CustomField>
    <fullName>Document_uploaded_to_Perfios__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Status of document of income source if uploaded to perfios</description>
    <label>Document uploaded to Perfios</label>
    <type>Checkbox</type>
</CustomField>