ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Email_Id_1__c.field-meta.xml
<CustomField>
    <fullName>Email_Id_1__c</fullName>
    <label>Email Id 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>