ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Executive_Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>Executive_Mobile_No__c</fullName>
    <label>Executive Mobile No</label>
    <type>Phone</type>
</CustomField>