ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Fixed_Assets__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Assets__c</fullName>
    <label>Fixed Assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>