ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Income__c.field-meta.xml
<CustomField>
    <fullName>Income__c</fullName>
    <label>Income</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>