ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Income_Assesment_Done__c.field-meta.xml
<CustomField>
    <fullName>Income_Assesment_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Income Assesment Done</label>
    <type>Checkbox</type>
</CustomField>