ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Income_Detail_Bank_Master__c.field-meta.xml
<CustomField>
    <fullName>Income_Detail_Bank_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Income Detail Bank Master</label>
    <referenceTo>Bank_Masters__c</referenceTo>
    <relationshipName>Income_Details</relationshipName>
    <type>Lookup</type>
</CustomField>