ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Income_From_Inc_Source__c.field-meta.xml
<CustomField>
    <fullName>Income_From_Inc_Source__c</fullName>
    <label>Income From Inc Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>