ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Income_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Income_Last_Year__c</fullName>
    <label>Income Last Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>