ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Income_Source__c.field-meta.xml
<CustomField>
    <fullName>Income_Source__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Income Source</label>
    <type>Checkbox</type>
</CustomField>