ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Income_Source_for_Tractor__c.field-meta.xml
<CustomField>
    <fullName>Income_Source_for_Tractor__c</fullName>
    <label>Income Source for Tractor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ITR</fullName>
            </value>
            <value>
                <fullName>Banking</fullName>
            </value>
            <value>
                <fullName>Financials</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>