ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Income_Source_Status__c.field-meta.xml
<CustomField>
    <fullName>Income_Source_Status__c</fullName>
    <label>Income Source Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SEP</fullName>
            </value>
            <value>
                <fullName>SEP-Not Verified</fullName>
            </value>
            <value>
                <fullName>NIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>