ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Incomeproof__c.field-meta.xml
<CustomField>
    <fullName>Incomeproof__c</fullName>
    <formula>IF(NOT(ISPICKVAL(Applicant__r.Opportunity__r.LeadSource , &apos;D2C&apos;)), 

    (IF(ISPICKVAL(Capture_Income_Method__c ,&apos;&apos; )  &amp;&amp; ISPICKVAL( Capture_ITR_Method__c , &apos;&apos;) &amp;&amp; ISPICKVAL(Capture_GST_Method__c ,&apos;&apos; ), &apos;NIP&apos; , &apos;IP&apos;)),

    TEXT(Income_Source_Status__c)
)</formula>
    <label>Incomeproof</label>
    <type>Text</type>
</CustomField>