ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/IP_NIP_Text__c.field-meta.xml
<CustomField>
    <fullName>IP_NIP_Text__c</fullName>
    <label>IP NIP Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>