ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Is_ICAI__c.field-meta.xml
<CustomField>
    <fullName>Is_ICAI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is ICAI</label>
    <type>Checkbox</type>
</CustomField>