ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Is_ICWAI__c.field-meta.xml
<CustomField>
    <fullName>Is_ICWAI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is ICWAI</label>
    <type>Checkbox</type>
</CustomField>