ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Is_Income_Credited_In_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Income_Credited_In_Bank_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Income Credited In Bank Account</label>
    <type>Checkbox</type>
</CustomField>