ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Is_MCI__c.field-meta.xml
<CustomField>
    <fullName>Is_MCI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is MCI</label>
    <type>Checkbox</type>
</CustomField>