ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Is_Salaried__c.field-meta.xml
<CustomField>
    <fullName>Is_Salaried__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Salaried</label>
    <type>Checkbox</type>
</CustomField>