ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Is_Self_Employed__c.field-meta.xml
<CustomField>
    <fullName>Is_Self_Employed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Self Employed</label>
    <type>Checkbox</type>
</CustomField>