ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Is_this_Permanent_Residence_Cum_office__c.field-meta.xml
<CustomField>
    <fullName>Is_this_Permanent_Residence_Cum_office__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is this Permanent Residence Cum office</label>
    <type>Checkbox</type>
</CustomField>