ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/IsOfficeAddressSubmitted__c.field-meta.xml
<CustomField>
    <fullName>IsOfficeAddressSubmitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsOfficeAddressSubmitted</label>
    <type>Checkbox</type>
</CustomField>