ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/ITR_API_Count__c.field-meta.xml
<CustomField>
    <fullName>ITR_API_Count__c</fullName>
    <label>ITR API Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>