ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/ITR_Last_Year_Date__c.field-meta.xml
<CustomField>
    <fullName>ITR_Last_Year_Date__c</fullName>
    <label>ITR Last Year Date</label>
    <type>Date</type>
</CustomField>