ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/ITRUpload_API_Count__c.field-meta.xml
<CustomField>
    <fullName>ITRUpload_API_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ITR Upload API Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>