ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Last_2nd_Month_Day_20__c.field-meta.xml
<CustomField>
    <fullName>Last_2nd_Month_Day_20__c</fullName>
    <label>Last 2nd Month Day 20</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>