ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Legal__c.field-meta.xml
<CustomField>
    <fullName>Legal__c</fullName>
    <label>Legal Entity Identifier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Private Limited</fullName>
            </value>
            <value>
                <fullName>Public Limited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>