ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Name_of_Recipient_Bank__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Recipient_Bank__c</fullName>
    <label>Name of Recipient Bank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>