ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Name_of_Recipient_Banks__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Recipient_Banks__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name of Recipient Banks</label>
    <referenceTo>Bank_Masters__c</referenceTo>
    <relationshipName>Income_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>