ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/No_of_Loan_Taken_In_Past__c.field-meta.xml
<CustomField>
    <fullName>No_of_Loan_Taken_In_Past__c</fullName>
    <label>No of Loan Taken In Past</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>&gt;4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>