ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Non_Current_Assets__c.field-meta.xml
<CustomField>
    <fullName>Non_Current_Assets__c</fullName>
    <label>Non Current Assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>