ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Office_District__c.field-meta.xml
<CustomField>
    <fullName>Office_District__c</fullName>
    <label>Office District</label>
    <length>255</length>
    <type>Text</type>
</CustomField>