ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Office_State__c.field-meta.xml
<CustomField>
    <fullName>Office_State__c</fullName>
    <label>Office State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>