ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/PAT__c.field-meta.xml
<CustomField>
    <fullName>PAT__c</fullName>
    <label>PAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>