ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/PBT__c.field-meta.xml
<CustomField>
    <fullName>PBT__c</fullName>
    <label>PBT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>