ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Profile</label>
    <referenceTo>Profile_Master__c</referenceTo>
    <relationshipName>Income_Details</relationshipName>
    <type>Lookup</type>
</CustomField>