ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Salaried_Self_employed__c.field-meta.xml
<CustomField>
    <fullName>Salaried_Self_employed__c</fullName>
    <label>Salaried/Self employed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salaried</fullName>
            </value>
            <value>
                <fullName>Self employed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>