ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Saral_date__c.field-meta.xml
<CustomField>
    <fullName>Saral_date__c</fullName>
    <label>Saral date</label>
    <type>Date</type>
</CustomField>